Fix IndicatorConfig constructor binding, optimize AnalysisService transactions, and simplify weekly price calculation (#141)
* Fix IndicatorConfig constructor binding, optimize AnalysisService transactions, and simplify weekly calculator

- Annotate IndicatorConfig constructor with @Autowired to resolve Spring Boot 3 constructor binding conflict
- Add checkstyle/test fix to YahooFinanceDownloader to stop early and break loop on InterruptedException
- Simplify WeeklyPriceCalculator computeWeeklyPrices() to use TickerRepository.findByIsActiveTrue() directly
- Remove unused latestDailyDate parameter from WeeklyPriceCalculator.processTicker()
- Optimize AnalysisService transactions by declaring getAnalysis() as readOnly=true and computeAndPersist() with Propagation.REQUIRES_NEW

* Fix duplicate daily price key constraint violation on download startup

- Add findTopByTickerOrderByPriceDateDesc method to DailyPriceRepository
- Query the fresh latest price date immediately before filtering in YahooFinanceDownloader to prevent race conditions or duplicate entries from interrupted runs
- Mock the new query method in YahooFinanceDownloaderTest to align unit tests

* Revert "Fix duplicate daily price key constraint violation on download startup"

This reverts commit 99ab7693c2f1182cf8df28cd3f494834bb96e851.

* final fixes to yahoo finance downloader